[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonarpy"
version = "5.0"
description = "Advanced Network Scanner with TCP and UDP support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "thevirtueye"},
]
keywords = ["network", "scanner", "security", "tcp", "udp", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = ["scapy>=2.5.0"]

[project.scripts]
sonarpy = "sonarpy.__main__:main"

[tool.setuptools.packages.find]
include = ["sonarpy*"]
